hphp/hack/test/typecheck/inout/bad_inout_use_lvalue8.php.exp
File "bad_inout_use_lvalue8.php", line 15, characters 5-15:
You cannot decorate this argument as inout (Parsing[1002])
File "bad_inout_use_lvalue8.php", line 15, characters 11-15:
?-> operator is not allowed in write context (Parsing[1002])
File "bad_inout_use_lvalue8.php", line 15, characters 11-16:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
File "bad_inout_use_lvalue8.php", line 15, characters 5-16:
Invalid argument (Typing[4110])
File "bad_inout_use_lvalue8.php", line 3, characters 18-20:
Expected int
File "bad_inout_use_lvalue8.php", line 15, characters 11-16:
But got ?int (use of ?-> operator)
